--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,18 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>U Cloud</title>
     <script src="libs/gsap/gsap.min.js" defer></script>
-
     <script src="libs/swiper/swiper-bundle.min.js" defer ></script>
     <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" >
 
+    <link rel="stylesheet" href="/style/index.css">
+    <script src="/js/index.js" defer></script>
+    <script src="/backend/register.js" defer></script>
 
-    <link rel="stylesheet" href="../style/index.css">
-    <script src="../js/index.js" defer></script>
 
 
-    
 
 
     <style>
@@ -42,31 +40,53 @@
 
     <div id="filter" onclick="show('none')"></div>
     <div id="modalForm">
-        <form action="">
-            <h1>Registration</h1>
+        <form id="registrationForm" onsubmit="handleRegistration(event)">
+            <h1>Реєстрація</h1>
             <div class="group">
-                <label for="username">User name</label>
-                <input type="text" id="username">
+                <label for="username">Ім'я користувача</label>
+                <input type="text" id="username" required>
             </div>
             <div class="group">
                 <label for="email">Email</label>
-                <input type="email" id="email">
+                <input type="email" id="email" required>
             </div>
             <div class="group">
-                <label for="password">Password</label>
-                <input type="password" id="password">
+                <label for="password">Пароль</label>
+                <input type="password" id="password" required>
             </div>
             <div class="group">
-                <label for="confirm">Confirm password</label>
-                <input type="password" id="confirm">
+                <label for="confirm">Підтвердити пароль</label>
+                <input type="password" id="confirm" required>
             </div>
             <div class="group">
                 <center>
-                    <a href="cloud.html" target="_blank" class="btn-primary">Register</a>
+                    <button type="submit" class="btn-primary">Реєстрація</button>
                 </center>
             </div>
         </form>
     </div>
+
+    <div id="filterEntry" onclick="show('none', 'login')"></div>
+    <div id="modalForm2">
+        <form id="entry" onsubmit="handleEntry(event)">
+            <h1>Вхід</h1>
+            <div class="group">
+                <label for="emailEntry">Email</label>
+                <input type="email" id="emailEntry" required>
+            </div>
+            <div class="group">
+                <label for="passwordEntry">Password</label>
+                <input type="password" id="passwordEntry" required>
+            </div>
+            <center>
+                <button type="submit" class="btn-primary">Увійти</button>
+            </center>
+        </form>
+    </div>
+
+
+
+
 
 
 
@@ -81,7 +101,8 @@
             <div class="slide__content">
                 <h2>U Cloud</h2>
                 <p>Зберігання вашої документації</p>
-                <button onclick="show('block')">Приеднатися до нас </button>
+                <button onclick="show('block', 'register')">Приєднатися до нас</button>
+                <button onclick="show('block', 'login')">Увійти</button>
             </div>
         </div>
         <div class="swiper-slide slide">
@@ -89,49 +110,49 @@
                 <h2>Швидкий доступ</h2>
                 <p>Доступ до ваших файлів у будь-який час, з будь-якого пристрою.</p>
                 <div class="pricing-table">
-  <div class="plan" onclick="selectPlan(this)">
-    <h2>Базовий</h2>
-    <p class="price">4,99 €</p>
-    <ul>
-      <li>Обсяг сховища: 100 ГБ</li>
-      <li> Підтримка форматів: PDF, DOCX, XLSX, PPTX, TXT</li>
-      <li>Пристрої: ПК, планшети, смартфони</li>
-      <li> Спільна робота: до 2 користувачів</li>
-      <li> Стандартне шифрування даних</li>
-      <li> Завантаження файлів: до 2 пристроїв</li>
-        <li> Автоматичне резервне копіювання: щодня</li>
-    </ul>
-  </div>
+                    <div class="plan" onclick="selectPlan(this)">
+                        <h2>Базовий</h2>
+                        <p class="price">4,99 €</p>
+                        <ul>
+                            <li>Обсяг сховища: 100 ГБ</li>
+                            <li> Підтримка форматів: PDF, DOCX, XLSX, PPTX, TXT</li>
+                            <li>Пристрої: ПК, планшети, смартфони</li>
+                            <li> Спільна робота: до 2 користувачів</li>
+                            <li> Стандартне шифрування даних</li>
+                            <li> Завантаження файлів: до 2 пристроїв</li>
+                            <li> Автоматичне резервне копіювання: щодня</li>
+                        </ul>
+                    </div>
 
-  <div class="plan" onclick="selectPlan(this)">
-    <h2>Стандарт</h2>
-    <p class="price">7,49 €</p>
-    <ul>
-      <li> Обсяг сховища: 500 ГБ</li>
-      <li> Підтримка форматів: PDF, DOCX, XLSX, PPTX, TXT</li>
-      <li> Пристрої: ПК, планшети, смартфони</li>
-      <li> Спільна робота: до 4 користувачів</li>
-      <li> Розширене шифрування даних</li>
-      <li> Завантаження файлів: до 4 пристроїв</li>
-      <li> Автоматичне резервне копіювання: щодня</li>
-    </ul>
-  </div>
+                    <div class="plan" onclick="selectPlan(this)">
+                        <h2>Стандарт</h2>
+                        <p class="price">7,49 €</p>
+                        <ul>
+                            <li> Обсяг сховища: 500 ГБ</li>
+                            <li> Підтримка форматів: PDF, DOCX, XLSX, PPTX, TXT</li>
+                            <li> Пристрої: ПК, планшети, смартфони</li>
+                            <li> Спільна робота: до 4 користувачів</li>
+                            <li> Розширене шифрування даних</li>
+                            <li> Завантаження файлів: до 4 пристроїв</li>
+                            <li> Автоматичне резервне копіювання: щодня</li>
+                        </ul>
+                    </div>
 
-  <div class="plan" onclick="selectPlan(this)">
-    <div class="label">Самый популярный</div>
-    <h2>Преміум</h2>
-    <p class="price">9,99 €</p>
-    <ul>
-      <li> Обсяг сховища: 1 ТБ</li>
-      <li> Підтримка форматів: PDF, DOCX, XLSX, PPTX, TXT</li>
-      <li> Пристрої:ПК, телефони, планшети</li>
-      <li> Спільна робота: до 6 користувачів</li>
-      <li> Преміум шифрування даних</li>
-      <li> Завантаження файлів: до 6 пристроїв</li>
-      <li> Автоматичне резервне копіювання: щодня</li>
-    </ul>
-  </div>
-</div>
+                    <div class="plan" onclick="selectPlan(this)">
+                        <div class="label">Самый популярный</div>
+                        <h2>Преміум</h2>
+                        <p class="price">9,99 €</p>
+                        <ul>
+                            <li> Обсяг сховища: 1 ТБ</li>
+                            <li> Підтримка форматів: PDF, DOCX, XLSX, PPTX, TXT</li>
+                            <li> Пристрої:ПК, телефони, планшети</li>
+                            <li> Спільна робота: до 6 користувачів</li>
+                            <li> Преміум шифрування даних</li>
+                            <li> Завантаження файлів: до 6 пристроїв</li>
+                            <li> Автоматичне резервне копіювання: щодня</li>
+                        </ul>
+                    </div>
+                </div>
 
                 <button onclick="show('block')">Приеднатися до нас</button>
             </div>
@@ -139,16 +160,16 @@
         <div class="swiper-slide slide">
             <div class="slide__content">
                 <h2>Чому обирають нас?</h2>
-    <p>Наша мета — забезпечити кожного користувача швидким, безпечним і зручним доступом до своїх документів у будь-який час.</p>
+                <p>Наша мета — забезпечити кожного користувача швидким, безпечним і зручним доступом до своїх документів у будь-який час.</p>
                 <p>Ми пропонуємо просту та зручну платформу для зберігання ваших файлів, яка дозволяє вам зосередитися на важливих речах.</p>
                 <p>Наша команда завжди готова допомогти вам у будь-яких питаннях.</p>
-                <p>Надійність на першому місці</p> 
+                <p>Надійність на першому місці</p>
                 <p> Працюємо з будь-якої точки світу</p>
                 <p> Проста інтеграція з вашими системами</p>
                 <ul>
-    
-                <a href="information.html" target="_blank"> <button>Детальна інформація</button></a>
-                <a href="contact.html" target="_blank"> <button>КОНТАКТИ</button></a>
+
+                    <a href="information.html" target="_blank"> <button>Детальна інформація</button></a>
+                    <a href="contact.html" target="_blank"> <button>КОНТАКТИ</button></a>
             </div>
         </div>
 
@@ -172,5 +193,51 @@
 
 
 </div>
+
+<!-- Модальное окно для папки -->
+<div id="folderModal" style="display:none; position:fixed; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:1000;">
+    <div id="folderModalContent" style="background:#fff; margin:5% auto; padding:20px; width:400px; position:relative;">
+        <button onclick="closeFolderModal()" style="position:absolute; right:10px; top:10px;">×</button>
+        <div id="modalFolderBody"></div>
+    </div>
+</div>
+
+<script>
+    // Пример структуры папок и файлов
+    const folders = {
+        "Документы": [
+            { name: "file1.pdf", url: "files/file1.pdf" },
+            { name: "file2.docx", url: "files/file2.docx" }
+        ],
+        "Фото": [
+            { name: "photo1.jpg", url: "files/photo1.jpg" }
+        ]
+    };
+
+    // Открыть модальное окно с файлами папки
+    function openFolderModal(folderName) {
+        const files = folders[folderName] || [];
+        const body = document.getElementById('modalFolderBody');
+        body.innerHTML = `<h3>${folderName}</h3><ul>` +
+            files.map(file =>
+                `<li><a href="${file.url}" target="_blank">${file.name}</a></li>`
+            ).join('') +
+            `</ul>`;
+        document.getElementById('folderModal').style.display = 'block';
+    }
+
+    // Закрыть модальное окно
+    function closeFolderModal() {
+        document.getElementById('folderModal').style.display = 'none';
+    }
+
+    // Пример: навесить обработчик на все элементы .folder-item
+    document.querySelectorAll('.folder-item').forEach(item => {
+        item.addEventListener('click', function() {
+            const folderName = this.textContent.trim();
+            openFolderModal(folderName);
+        });
+    });
+</script>
 </body>
 </html>
