--- a/src/html/cloud.html
+++ b/src/html/cloud.html
@@ -43,7 +43,7 @@
       </a>
     </div>
     <div class="nav-item">
-      <a href="../html/index.html" class="nav-link">
+      <a href="index.html" class="nav-link">
         <span class="material-symbols-rounded nav-icon">logout</span>
         <span class="nav-label">Вихід</span>
       </a>
@@ -104,7 +104,7 @@
         <!-- Форма для загрузки файла -->
         <form id="uploadFileForm" enctype="multipart/form-data">
           <input type="file" id="fileInput" name="file" />
-          <button type="button" onclick="uploadFileToFolder(folderId)">Загрузить файл</button>
+          <button type="button" onclick="uploadFileToFolder(folderId)">Завантажити файл</button>
         </form>
         <div id="fileList">Список файлов будет отображаться здесь...</div>
       </div>
